# formula-recognition-assistant

./: .gitignore  App.tsx  README.md  index.html  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: build.yml
components/: PreviewPanel.tsx  ResultPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusFooter.tsx
services/: tauriService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
utils/: exportWord.ts
