[package]
name = "formula-ocr"
version = "1.0.0"
description = "公式识别助手 - AI OCR"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
chrono = "0.4"
dirs = "6"
regex-lite = "0.1"
open = "5"
